test/modules/shadowing/var-shadows-public-use.good
var-shadows-public-use.chpl:7: error: symbol x is multiply defined
var-shadows-public-use.chpl:2: note: also defined here
